# fall-2025-interest-group-projects

./: .gitignore
project/01-llm-lora/: README.md
project/01-llm-lora/results/: experiment_results_quick.json
project/02-embeddings/: embedding.ipynb
project/03-information-retrieval/: README.md  pyproject.toml
user/mgustineli/: embedding.ipynb  information-retrieval.ipynb
