[project]
name = "ir-project"
version = "0.1.0"
description = "Information Retrieval: MS MARCO with Dense Retrieval and Reranking"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ir-measures>=0.3.0",
    "python-terrier",
    "pyterrier-sentence-transformers",
]